force-app/main/default/objects/Field__c/Field__c.object-meta.xml
<CustomObject>
    <label>Field</label>
    <nameField>
        <displayFormat>FI-{00000000}</displayFormat>
        <label>Field Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>