force-app/main/default/objects/Field__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <description>Related Typeform Form</description>
    <inlineHelpText>Related Typeform Form</inlineHelpText>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Form Fields</relationshipLabel>
    <relationshipName>Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>