force-app/main/default/objects/Field__c/fields/Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Name__c</fullName>
    <formula>Form__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Name</label>
    <type>Text</type>
</CustomField>