force-app/main/default/objects/Field__c/fields/Mapped_Contact_Field__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Contact_Field__c</fullName>
    <description>Add API name of contact Field to which this field should be mapped to. Response for this field will be used to create Contact with given information for this field.</description>
    <inlineHelpText>Add API name of contact Field to which this field should be mapped to.</inlineHelpText>
    <label>Mapped Contact Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>