force-app/main/default/objects/Field__c/fields/Typeform_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>Typeform_Field_Id__c</fullName>
    <description>Unique Typeform Field External Id</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Typeform Field External Id</inlineHelpText>
    <label>Typeform Field Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>