force-app/main/default/objects/Field__c/listViews/Global_New_Form_Fields.listView-meta.xml
<ListView>
    <fullName>Global_New_Form_Fields</fullName>
    <columns>NAME</columns>
    <columns>Form__c</columns>
    <columns>Title__c</columns>
    <columns>Mapped_Contact_Field__c</columns>
    <columns>Type__c</columns>
    <columns>Form_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Name__c</field>
        <operation>equals</operation>
        <value>Global New Membership Form</value>
    </filters>
    <label>Global New Form Fields</label>
</ListView>